force-app/main/default/objects/L_I_Information__c/L_I_Information__c.object-meta.xml
<CustomObject>
    <description>updated to reflect more current L &amp; I information and processes. Renamed the old L&amp;I Tab, Emerging Markets Quotes/Orders</description>
    <label>L&amp;I Information</label>
    <nameField>
        <label>L&amp;I Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L&amp;I Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>