force-app/main/default/objects/L_I_Information__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>