force-app/main/default/objects/L_I_Information__c/fields/External_Information_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Information_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Information ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>