force-app/main/default/objects/L_I_Information__c/fields/Initial_Comments__c.field-meta.xml
<CustomField>
    <fullName>Initial_Comments__c</fullName>
    <label>Initial Comments</label>
    <type>TextArea</type>
</CustomField>