force-app/main/default/objects/L_I_Information__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>Lead ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>