force-app/main/default/objects/L_I_Information__c/fields/NIMS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NIMS_Account_Number__c</fullName>
    <label>NIMS Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>