force-app/main/default/objects/L_I_Information__c/fields/P10_Account__c.field-meta.xml
<CustomField>
    <fullName>P10_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>P10 Account</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>L&amp;I Informations</relationshipLabel>
    <relationshipName>L_I_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>