force-app/main/default/objects/L_I_Information__c/fields/P10_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>P10_Account_Number__c</fullName>
    <formula>P10_Account__r.P10_Invoice_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV Account #</label>
    <type>Text</type>
</CustomField>