force-app/main/default/objects/L_I_Information__c/fields/Property_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_City__c</fullName>
    <label>Property Address City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>