force-app/main/default/objects/L_I_Information__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>Property Name</description>
    <label>Property Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>