force-app/main/default/objects/L_I_Information__c/fields/Provisioning_Account_s__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Account_s__c</fullName>
    <label>Provisioning Account(s)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>