force-app/main/default/objects/L_I_Information__c/fields/SFA_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>SFA_Opportunity_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>SFA Opportunity ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>