force-app/main/default/objects/L_I_Information__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HTL Agreement Negotiation</fullName>
            </value>
            <value>
                <fullName>HTL Account Creation</fullName>
            </value>
            <value>
                <fullName>HTL Build Out</fullName>
            </value>
            <value>
                <fullName>SD Subsidy SWAP</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>