force-app/main/default/objects/L_I_Information__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <label>Total Units</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>