force-app/main/default/objects/L_I_Information__c/listViews/L_I_Information.listView-meta.xml
<ListView>
    <fullName>L_I_Information</fullName>
    <columns>P10_Account_Number__c</columns>
    <columns>P10_Account__c</columns>
    <columns>NAME</columns>
    <columns>SFA_Opportunity_ID__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>L&amp;I Information</label>
</ListView>